--- a/debian/po/pa.po
+++ b/debian/po/pa.po
@@ -19,7 +19,7 @@ msgstr ""
 "Project-Id-Version: pa\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2006-11-25 12:39+0530\n"
+"PO-Revision-Date: 2006-12-17 23:15+0530\n"
 "Last-Translator: A S Alam <apbrar@gmail.com>\n"
 "Language-Team: Punjabi <fedora-trans-pa@redhat.com>\n"
 "MIME-Version: 1.0\n"
@@ -66,7 +66,7 @@ msgstr ""
 #. Description
 #: ../main-menu.templates:23
 msgid "Choose an installation step:"
-msgstr "ਇੰਸਟਾਲੇਸ਼ਨ ਪਗ਼ ਚੁਣੋ:"
+msgstr "ਇੱਕ ਇੰਸਟਾਲੇਸ਼ਨ ਪਗ਼ ਚੁਣੋ:"
 
 #. Type: select
 #. Description
