--- a/debian/po/ku.po
+++ b/debian/po/ku.po
@@ -7,17 +7,19 @@
 # Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
 #
+# Main translator: Rizoyê Xerzî <riza.seckin@gmail.com>
 msgid ""
 msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2006-11-14 12:00+0000\n"
-"Last-Translator: rizoye-xerzi <rizoxerzi@gmail.com>\n"
+"PO-Revision-Date: 2006-12-24 12:56+0200\n"
+"Last-Translator: Amed Çeko Jiyan <amedcj@gmail.com>\n"
 "Language-Team: Kurdish <gnu-ku-wergerandin@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Rosetta-Export-Date: 2006-12-02 05:38+0000\n"
 
 #. Type: text
 #. Description
@@ -35,7 +37,7 @@ msgstr "Gava piştre ya pêvajoya sazkirinê hilbijêre:"
 #. Description
 #: ../main-menu.templates:9
 msgid "This is the main menu for the Debian installer."
-msgstr "Ev pêşeka navîn a sazkarê Debian ye."
+msgstr "Ev pêşeka navîn a sazkarê Debian e."
 
 #. Type: error
 #. Description
@@ -50,7 +52,7 @@ msgid ""
 "An installation step failed. You can try to run the failing item again from "
 "the menu, or skip it and choose something else. The failing step is: ${ITEM}"
 msgstr ""
-"Gaveke sazkirinê bi ser neket. Tu dikarî li pêşekê vê gavê dîsa bidî "
+"Gaveke sazkirinê bi ser neket. Tu dikarî ji pêşekê vê gavê dîsa bidî "
 "destpêkirin, an jî tu dikarî guh mediyê û derbasî gaveke din bibî. Gava "
 "biserneketî ev e: ${ITEM}"
 
@@ -67,4 +69,4 @@ msgid ""
 "This installation step depends on one or more other steps that have not yet "
 "been performed."
 msgstr ""
-"Ji bo vê gava sazkirinê gavek an jî bêhtir gavên ku nehatine pêkanîn lazim e."
+"Ji bo vê gava sazkirinê gavek an jî bêhtir gavên ku nehatine pêkanîn divên."
