--- a/debian/po/pt_BR.po
+++ b/debian/po/pt_BR.po
@@ -3,8 +3,6 @@
 #
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
-# Brazilian Portuguese messages for debian-installer.
-# Copyright (C) 2003 Software in the Public Interest, Inc.
 # This file is distributed under the same license as debian-installer.
 #
 msgid ""
@@ -12,9 +10,9 @@ msgstr ""
 "Project-Id-Version: debian-installer\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2004-08-19 09:28+0200\n"
-"PO-Revision-Date: 2005-05-23 12:18+0100\n"
-"Last-Translator: André Luís Lopes <andrelop@debian.org>\n"
-"Language-Team:  Debia-BR Project <debian-l10n-portuguese@lists.debian.org>\n"
+"PO-Revision-Date: 2006-12-27 00:59-0200\n"
+"Last-Translator: Felipe Augusto van de Wiel (faw) <faw@cathedrallabs.org>\n"
+"Language-Team: l10n portuguese <debian-l10n-portuguese@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -51,7 +49,7 @@ msgid ""
 "the menu, or skip it and choose something else. The failing step is: ${ITEM}"
 msgstr ""
 "Uma etapa da instalação falhou. Você pode tentar executar o item que falhou "
-"novamente a partir do menu, ou pulá-lo e escolher um outro item quaquer. A "
+"novamente a partir do menu, ou pulá-lo e escolher um outro item qualquer. A "
 "etapa que falhou é : ${ITEM}"
 
 #. Type: select
