--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+main-menu (1.16) UNRELEASED; urgency=low
+
+  * show_main_menu: free menu variable after use. Closes: #405774.
+    Thanks to Masami Ichikawa who spotted the error.
+
+ -- Frans Pop <fjp@debian.org>  Sat,  6 Jan 2007 09:46:08 +0100
+
 main-menu (1.15) unstable; urgency=low
 
   [ Updated translations ]
