--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,26 @@
-main-menu (1.16) UNRELEASED; urgency=low
+main-menu (1.16) unstable; urgency=low
 
   * show_main_menu: free menu variable after use. Closes: #405774.
     Thanks to Masami Ichikawa who spotted the error.
+  * Add myself to uploaders.
 
- -- Frans Pop <fjp@debian.org>  Sat,  6 Jan 2007 09:46:08 +0100
+  [ Updated translations ]
+  * Arabic (ar.po) by Ossama M. Khayat
+  * Belarusian (be.po) by Pavel Piatruk
+  * Bulgarian (bg.po) by Damyan Ivanov
+  * Bosnian (bs.po) by Safir Secerovic
+  * Danish (da.po) by Claus Hindsgaul
+  * Georgian (ka.po) by Aiet Kolkhi
+  * Kurdish (ku.po) by Amed Çeko Jiyan
+  * Latvian (lv.po) by Aigars Mahinovs
+  * Malayalam (ml.po) by Praveen A
+  * Norwegian Nynorsk (nn.po) by Håvard Korsvoll
+  * Panjabi (pa.po) by A S Alam
+  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)
+  * Russian (ru.po) by Yuri Kozlov
+  * Tagalog (tl.po) by Eric Pareja
+
+ -- Frans Pop <fjp@debian.org>  Sat,  6 Jan 2007 10:29:01 +0100
 
 main-menu (1.15) unstable; urgency=low
 
