--- a/debian/po/ml.po
+++ b/debian/po/ml.po
@@ -19,13 +19,12 @@ msgstr ""
 "Project-Id-Version: ml\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-01-06 22:47+0100\n"
-"PO-Revision-Date: 2006-12-03 15:43+0530\n"
+"PO-Revision-Date: 2007-01-18 08:21+0530\n"
 "Last-Translator: Praveen A <pravi.a@gmail.com>\n"
 "Language-Team: malayalam <smc-discuss@googlegroups.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
 
 #. Type: text
 #. Description
@@ -59,7 +58,8 @@ msgid ""
 "the menu, or skip it and choose something else. The failing step is: ${ITEM}"
 msgstr ""
 "ഒരു ഇന്സ്റ്റലേഷന്‍ നടപടിക്രമം പരാജയപ്പെട്ടു. പരാജയപ്പെട്ട നടപടി മെനുവില്‍ നിന്നും വീണ്ടും "
-"ശ്രമിക്കുകയോ മറ്റെന്തെങ്കിലും തിരഞ്ഞെടുക്കുകയോ ചെയ്യാം. ${ITEM} ആണ് പരാജയപ്പെട്ടത്"
+"പ്രവര്ത്തിപ്പിക്കാന്‍ശ്രമിക്കുകയോ മറ്റെന്തെങ്കിലും തിരഞ്ഞെടുക്കുകയോ ചെയ്യാം. ${ITEM} ആണ് "
+"പരാജയപ്പെട്ടത്"
 
 #. Type: select
 #. Description
