--- a/debian/po/ml.po
+++ b/debian/po/ml.po
@@ -4,24 +4,23 @@
 # DO NOT MODIFY IT DIRECTLY : SUCH CHANGES WILL BE LOST
 # 
 # translation of ml.po to malayalam
-# http://fci.wikia.com/wiki/Debian/മലയാളം/ഇന്സ്റ്റാളര്‍/ലെവല്‍1/മാസ്റ്റര്‍/ml.po
-# Copyright (c)  2006 Praveen A <pravi.a@gmail.com>, Santhosh Thottingal <santhosh00@gmail.com>, Sreejith :: ശ്രീജിത്ത് കെ <sreejithk2000@gmail.com> and Debian Project
-# Credits:  V Sasi Kumar, Sreejith N and Seena N
+# Copyright (c)  2006-2007 Praveen|പ്രവീണ്‍ A|എ <pravi.a@gmail.com>, Santhosh Thottingal <santhosh00@gmail.com>, Sreejith :: ശ്രീജിത്ത് കെ <sreejithk2000@gmail.com> and Debian Project
+# Credits:  V Sasi Kumar, Sreejith N, Seena N, Anivar Aravind, Hiran Venugopalan and Suresh P
 #
 # Debian Installer master translation file template
 # Don't forget to properly fill-in the header of PO files
 # Debian Installer translators, please read the D-I i18n documentation
 # in doc/i18n/i18n.txt#
 #
-# Praveen A <pravi.a@gmail.com>, 2006.
 msgid ""
 msgstr ""
-"Project-Id-Version: ml\n"
+"Project-Id-Version: Debian Installer Level 1\n"
 "Report-Msgid-Bugs-To: debian-boot@lists.debian.org\n"
 "POT-Creation-Date: 2007-01-06 22:47+0100\n"
-"PO-Revision-Date: 2007-01-18 08:21+0530\n"
+"PO-Revision-Date: 2007-02-17 20:46+0530\n"
 "Last-Translator: Praveen A <pravi.a@gmail.com>\n"
-"Language-Team: malayalam <smc-discuss@googlegroups.com>\n"
+"Language-Team: Swathanthra Malayalam Computing <smc-discuss@googlegroups."
+"com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -30,25 +29,25 @@ msgstr ""
 #. Description
 #: ../main-menu.templates:3
 msgid "Debian installer main menu"
-msgstr "ഡെബിയന്‍ ഇന്സ്റ്റാളറിന്റെ പ്രധാന മെനു"
+msgstr "ഡെബിയന്‍ ഇന്‍സ്റ്റാളറിന്റെ പ്രധാന മെനു"
 
 #. Type: select
 #. Description
 #: ../main-menu.templates:9
 msgid "Choose the next step in the install process:"
-msgstr "ഇന്സ്റ്റാള്‍ പ്രക്രിയയിലെ അടുത്ത നടപടി തിരഞ്ഞെടുക്കൂ:"
+msgstr "ഇന്‍സ്റ്റാള്‍ പ്രക്രിയയിലെ അടുത്ത നടപടിക്രമം തിരഞ്ഞെടുക്കുക:"
 
 #. Type: select
 #. Description
 #: ../main-menu.templates:9
 msgid "This is the main menu for the Debian installer."
-msgstr "ഡെബിയന്‍ ഇന്സ്റ്റാളറിന്റെ പ്രധാന മെനുവാണിത്."
+msgstr "ഡെബിയന്‍ ഇന്‍സ്റ്റാളറിന്റെ പ്രധാന മെനുവാണിത്."
 
 #. Type: error
 #. Description
 #: ../main-menu.templates:14
 msgid "Installation step failed"
-msgstr "ഇന്സ്റ്റലേഷന്‍ നടപടി ക്രമം പരാജയപ്പെട്ടു"
+msgstr "ഇന്‍സ്റ്റലേഷന്‍ നടപടിക്രമം പരാജയപ്പെട്ടു"
 
 #. Type: error
 #. Description
@@ -57,15 +56,15 @@ msgid ""
 "An installation step failed. You can try to run the failing item again from "
 "the menu, or skip it and choose something else. The failing step is: ${ITEM}"
 msgstr ""
-"ഒരു ഇന്സ്റ്റലേഷന്‍ നടപടിക്രമം പരാജയപ്പെട്ടു. പരാജയപ്പെട്ട നടപടി മെനുവില്‍ നിന്നും വീണ്ടും "
-"പ്രവര്ത്തിപ്പിക്കാന്‍ശ്രമിക്കുകയോ മറ്റെന്തെങ്കിലും തിരഞ്ഞെടുക്കുകയോ ചെയ്യാം. ${ITEM} ആണ് "
+"ഒരു ഇന്‍സ്റ്റലേഷന്‍ നടപടിക്രമം പരാജയപ്പെട്ടു. പരാജയപ്പെട്ട നടപടിക്രമം മെനുവില്‍ നിന്നും വീണ്ടും "
+"പ്രവര്‍ത്തിപ്പിക്കാന്‍ ശ്രമിക്കുകയോ മറ്റെന്തെങ്കിലും തിരഞ്ഞെടുക്കുകയോ ചെയ്യാം. ${ITEM} ആണ് "
 "പരാജയപ്പെട്ടത്"
 
 #. Type: select
 #. Description
 #: ../main-menu.templates:23
 msgid "Choose an installation step:"
-msgstr "ഒരു ഇന്സ്റ്റലേഷന്‍ നടപടി തിരഞ്ഞെടുക്കൂ:"
+msgstr "ഒരു ഇന്‍സ്റ്റലേഷന്‍ നടപടി തിരഞ്ഞെടുക്കുക:"
 
 #. Type: select
 #. Description
@@ -74,4 +73,4 @@ msgid ""
 "This installation step depends on one or more other steps that have not yet "
 "been performed."
 msgstr ""
-"ഈ ഇന്സ്റ്റലേഷന്‍ നടപടിക്രമം ഇതു വരെ ചെയ്യാത്ത ഒന്നോ അതിലധികമോ നടപടിക്രമങ്ങളെ ആശ്രയിക്കുന്നു."
+"ഈ ഇന്‍സ്റ്റലേഷന്‍ നടപടിക്രമം ഇതു വരെ ചെയ്യാത്ത ഒന്നോ അതിലധികമോ നടപടിക്രമങ്ങളെ ആശ്രയിക്കുന്നു."
