--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+main-menu (1.18) unstable; urgency=low
+
+  [ Updated translations ]
+  * Finnish (fi.po) by Tapio Lehtonen
+  * Hebrew (he.po) by Lior Kaplan
+  * Malayalam (ml.po) by Praveen A
+
+ -- Frans Pop <fjp@debian.org>  Tue, 27 Feb 2007 16:54:34 +0100
+
 main-menu (1.17) unstable; urgency=low
 
   [ Updated translations ]
