--- a/debian/changelog
+++ b/debian/changelog
@@ -3,8 +3,8 @@ main-menu (1.19) UNRELEASED; urgency=low
   * Avoid suppressing menu items that have never been seen before just
     because they have a lower menu item number than the last successful item
     (closes: #288053).
-  * Restore previous default priority when selecting a menu item immediately
-    after backing up to the main menu.
+  * Restore previous default priority when selecting a menu item (other than
+    neverdefault items) immediately after backing up to the main menu.
 
  -- Colin Watson <cjwatson@debian.org>  Sat, 16 Dec 2006 09:42:13 +0000
 
